# akm-murex-starter-kit

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  SECURITY.md  TESTING.md  WINDOWS-TEST.md  pyproject.toml
.agentic/hooks/: editable-paths.txt  lint-commands.json
.github/: CODEOWNERS
.github/hooks/: README.md  hooks.json
.github/hooks/scripts/: audit-log.ps1  audit-log.sh  dangerous-command-guard.sh  lint-on-edit.sh  restricted-path-guard.ps1  restricted-path-guard.sh
.github/skills/doctor/: SKILL.md
.github/workflows/: ci.yml
copilot-manual-test/: MULTI-REPO-WALKTHROUGH.md  PROMPT.md  README.md
copilot-manual-test/results/: 2026-07-06-copilot-cli-1.0.68-windows.md
docs/: feature-flow.md  setup-flow-decisions.md  setup-flow.md
docs/feature-phases/: 1a-understand.md  1b-frame.md  2-split.md  3-story-loop.md  4-feature-review.md  5-retro.md
docs/init-topics/: hooks.md  instruction-files.md  skills.md  tooling.md
docs/superpowers/plans/: 2026-07-23-init-module-knowledge.md
docs/superpowers/specs/: 2026-07-23-init-module-knowledge-design.md
src/akmaestro/: __init__.py  cli.py  installer.py  state.py
src/akmaestro/assets/bootstrap/: AGENTS.bootstrap.md  copilot-instructions.bootstrap.md
src/akmaestro/assets/hooks-data/: dangerous-commands.txt  editable-paths.txt  restricted-paths.txt
src/akmaestro/assets/runtime/: STATE-PROTOCOL.md
src/akmaestro/assets/schemas/: action-checks.schema.json  active-feature.schema.json  environment-requirements.schema.json  feature-state.schema.json  local-readiness.schema.json  setup-evidence.schema.json  setup-state.schema.json
src/murex_starter_kit/: __init__.py  cli.py  installer.py
tests/: test_installer.py  test_state.py
(+35 files in other folders)
